# aync_connect

./: CMakeLists.txt  cfg.json  config.cfg  main.cpp
headers/: CHttpConnect.h  CSession.h  Functions.h
src/: CHttpConnect.cpp  CSession.cpp  daemon.cpp  daemonwork.cpp  get_config.cpp
tests/: CHttpConnectTest.cpp  get_configTest.cpp
